--- a/nodesnim/window.html
+++ b/nodesnim/window.html
@@ -124,6 +124,8 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#addScene%2CScenePtr"
     title="addScene(scene: ScenePtr)"><wbr />add<wbr />Scene<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#addMainScene%2CScenePtr"
+    title="addMainScene(scene: ScenePtr)"><wbr />add<wbr />Main<wbr />Scene<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#changeScene%2Cstring"
     title="changeScene(name: string): bool"><wbr />change<wbr />Scene<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#setMainScene%2Cstring"
@@ -204,6 +206,17 @@ function main() {
 
 
 </dd>
+<a id="addMainScene,ScenePtr"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#addMainScene%2CScenePtr"><span class="Identifier">addMainScene</span></a><span class="Other">(</span><span class="Identifier">scene</span><span class="Other">:</span> <a href="nodes/scene.html#ScenePtr"><span class="Identifier">ScenePtr</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>Adds a new scene in the app and set it mark it as main scene.</p>
+<p>Arguents:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">scene</span></tt> - pointer to the Scene object.</li>
+</ul>
+
+
+</dd>
 <a id="changeScene,string"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#changeScene%2Cstring"><span class="Identifier">changeScene</span></a><span class="Other">(</span><span class="Identifier">name</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                                    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
@@ -264,7 +277,7 @@ Start main window loop.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 04:07:10 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-31 04:17:23 UTC</small>
       </div>
     </div>
   </div>
