--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>nodesnim</title>
 </head>
 <body>
-    Nodesnim home page
+    <div align="center">
+        <h1>
+            <font color="#d8d3ec" style="position: absolute; margin-left: -32px;">♡</font>
+            nodes<font color="#9a4488">nim</font>
+        </h1>
+    </div>
 </body>
 </html>
